# Blend-Cpp

./: .gitignore  CMakeLists.txt  README.md  blocks.txt  main.cpp
core-lib/: CMakeLists.txt
core-lib/include/: blend_sdna.hpp
core-lib/src/: blend_data_blocks.cpp  blend_sdna.cpp
demo/: main.cpp
full-lib/include/: blend_process.hpp
include/: blend_data_blocks.hpp  blend_file_intermediate.h  blend_file_reader.h  blend_process.hpp  blend_sdna.hpp  blendio_core.hpp  blendio_process.hpp
include/blend_types/: generated_code.h  sdna_types.h  sdna_types_gen.h
include/core/: blend_byte_buffer.hpp  blendio_byte_buffer.hpp  blendio_data_blocks.hpp  blendio_sdna.hpp
src/: blend_byte_buffer.cpp  blend_file_intermediate.cpp  blend_file_reader.cpp  blend_process.cpp  blend_sdna.cpp  blendio_process.cpp
src/core/: blend_byte_buffer.cpp  blend_data_blocks.cpp  blend_sdna.cpp  blendio_byte_buffer.cpp  blendio_data_blocks.cpp  blendio_sdna.cpp
